--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+Build_Win/
+Build.zip
+Assets/Art/Sounds/LVL ambient music V3.wav
+Assets/Art/Sounds/LVL ambient music V3.wav.meta
+Assets/Art/Sounds/LVL ambient sound oiseaux.wav
+Assets/Art/Sounds/LVL ambient sound oiseaux.wav.meta
