correction de bugs

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ Assets/Art/Sounds/LVL ambient music V3.wav
 Assets/Art/Sounds/LVL ambient music V3.wav.meta
 Assets/Art/Sounds/LVL ambient sound oiseaux.wav
 Assets/Art/Sounds/LVL ambient sound oiseaux.wav.meta
+Build_web/
